# xodata

./: LICENSE  NOTICE  README.md
python/xodata/: .gitignore  AGENTS.md  pyproject.toml  run-tests
python/xodata/src/mime_batch/: __init__.py  mime_batch.py
python/xodata/src/odata_json/: __init__.py  odata_json.py
python/xodata/tests/: test_mime_batch.py  test_odata_json.py
